Bug 159422 - FILEOPEN XLSX Data table legend markers are not shifted by long title
Summary: FILEOPEN XLSX Data table legend markers are not shifted by long title
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.1 all versions
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2024-01-29 08:48 UTC by Gabor Kelemen (Collabora)
Modified: 2024-03-08 10:05 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Excel 2016 (13.51 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2024-01-29 08:48 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the example file in Excel 2016 and Calc (98.71 KB, image/png)
2024-01-29 09:09 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-01-29 08:48:02 UTC
Attached example file contains a data table with one very long, multiple line data series name. This long text shifts the data table downwards, but the legend markers positioning does not take this into account.

1. Open attached file
-> the colored legend markers are above their text

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d49b0c3654e50ff9b74545140e6f19e008009c33
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

This started in 7.5 when data table rendering was first implemented.
Comment 1 Gabor Kelemen (Collabora) 2024-01-29 08:48:26 UTC
Created attachment 192230 [details]
Example file from Excel 2016
Comment 2 Gabor Kelemen (Collabora) 2024-01-29 09:09:15 UTC
Created attachment 192231 [details]
Screenshot of the example file in Excel 2016 and Calc
Comment 3 Xisco Faulí 2024-01-30 10:06:21 UTC
Reproduced in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 966f075a332b38a2689dad317d5d3c3fa61a1efb
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2024-03-08 08:41:24 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f4ba83e82aafc206d17d2fa66a27573ebc5a3624

tdf#159422 - chart view: fix symbols position of data table legend

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.